--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
-    "meteor-node-stubs": "^0.3.2",
-    "openid-client": "^3.2.0"
+    "meteor-node-stubs": "^0.3.2"
   }
 }
